fix #956 stop language select from jumping around

--- a/web/src/components/layout/nav.css
+++ b/web/src/components/layout/nav.css
@@ -164,7 +164,7 @@ header {
     }
 
     & .selection {
-        border: none;
+        border-color: transparent;
         color: var(--black);
         background: var(--lighter-grey);
     }
